welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: '=' expected but 'new' found.
  var T new Array[Color](getMondeHauteur());
        ^Array1:3: error: illegal start of simple expression
  var T new Array[Color](getMondeHauteur());
                                           ^Array1:10: error: ')' expected but 'for' found.
    for(j <-1 to (getMondeLargeur()-1){
    ^Array1:23: error: ')' expected but '}' found.
} 
^